added client facing js file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Motivational Quotes API</h1>
-    <p>Please use localhost:8000/api/motivational-quotes</p>
+    <input type="text" />
+    <button>I NEED MOTIVATION!</button>
+    <h2>Quote:</h2>
+    <p></p>
   </body>
+  <script src="main.js"></script>
 </html>
