added a list of names as options, client side

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <h1>Motivational Quotes API</h1>
     <input type="text" />
     <button>I NEED MOTIVATION!</button>
+    <h3>Please pick from the following list of enlightened people</h3>
+    <ul>
+      <li>Winston Churchill</li>
+      <li>Dale Carnegie</li>
+      <li>Confucius</li>
+      <li>Roy Bennett</li>
+      <li>Richelle Goodrich</li>
+      <li>Will Durant</li>
+    </ul>
     <h2>Quote:</h2>
+    <h4></h4>
     <p></p>
   </body>
   <script src="main.js"></script>
